add missing class; some more smallish changes